--- a/Frontend Mentor/3 Column Preview/src/styles.css
+++ b/Frontend Mentor/3 Column Preview/src/styles.css
@@ -18,15 +18,23 @@ body {
     line-height: 1.7; 
 }
 
+.page-wrap {
+    position: relative;
+    height: 100%;
+    min-height: 100vh;
+}
+
 .container {
     position: relative;
     top: 50%;
     left: 50%;
-    height: 55%;
+    height: 50%;
     width: 60%;
+    min-width: 875px;
     transform: translate(-50%, -50%);
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    /*padding-bottom: 2em;*/
 }
 
 .column {
@@ -63,8 +71,7 @@ h1 {
 button {
     display: block;
     position: relative;
-    top: 4em;
-    bottom: 5em;
+    margin-top: 3em;
     background: hsl(0, 0%, 95%);
     box-sizing: border-box;
     border: none;
@@ -73,7 +80,6 @@ button {
     font-family: inherit;
     transition: all ease-in-out 150ms;
 }
-
 
 button a {
     text-decoration: none;
@@ -104,14 +110,40 @@ button:hover a{
 }
 
 .attribution { 
+    display: block;
     position: absolute;
-    bottom: 20px;
+    bottom: 2em;
     left: 50%;
+    color: rgba(0, 0, 0, .5);
     transform: translateX(-50%);
     font-size: 11px; 
-    text-align: center; 
+    text-align: center;
 }
 
 .attribution a { 
-    color: #fff;
+    color: rgba(0, 0, 0, .5);
+}
+
+
+@media only screen and (max-width: 375px) {
+
+    .container {
+        position: relative;
+        top: 10%;
+        left: 50%;
+        height: auto;
+        width: 90%;
+        min-width: 300px;
+        transform: translateX(-50%);
+        grid-template-columns: 1fr;
+    }
+
+    .sedans {
+        border-radius: .6em .6em 0 0;
+    }
+
+    .luxury {
+        border-radius: 0 0 .6em .6em;
+    }
+
 }
