--- a/Frontend Mentor/3 Column Preview/src/styles.css
+++ b/Frontend Mentor/3 Column Preview/src/styles.css
@@ -8,9 +8,12 @@
     -webkit-box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+}
+
 body {
     width: 100vw;
-    height: 100vh;
     background: hsl(0, 0%, 95%);
     color: hsla(0, 0%, 100%, 0.75);
     font-family: 'Lexend Deca', sans-serif;
@@ -21,7 +24,7 @@ body {
 .page-wrap {
     position: relative;
     height: 100%;
-    min-height: 100vh;
+    min-height: 100%;
 }
 
 .container {
@@ -34,7 +37,6 @@ body {
     transform: translate(-50%, -50%);
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    /*padding-bottom: 2em;*/
 }
 
 .column {
@@ -127,13 +129,18 @@ button:hover a{
 
 @media only screen and (max-width: 375px) {
 
+    .page-wrap {
+        height: auto;
+    }
+
     .container {
         position: relative;
-        top: 10%;
+        margin: 20% 0;
         left: 50%;
         height: auto;
         width: 90%;
         min-width: 300px;
+        padding-bottom: 20%;
         transform: translateX(-50%);
         grid-template-columns: 1fr;
     }
