--- a/Frontend Mentor/3 Column Preview/src/styles.css
+++ b/Frontend Mentor/3 Column Preview/src/styles.css
@@ -25,6 +25,10 @@ body {
     position: relative;
     height: 100%;
     min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 /* Accessible by screen readers but not visible */
@@ -37,12 +41,12 @@ body {
 
 .container {
     position: relative;
+    transform: translateY(-50%);
     top: 50%;
-    left: 50%;
-    height: 50%;
+    height: auto;
     width: 60%;
     min-width: 875px;
-    transform: translate(-50%, -50%);
+    max-width: 1000px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
 }
@@ -113,13 +117,11 @@ a:hover {
 
 .attribution { 
     display: block;
-    position: absolute;
     bottom: 2em;
-    left: 50%;
     color: rgba(0, 0, 0, .5);
-    transform: translateX(-50%);
     font-size: 11px; 
     text-align: center;
+    padding: 2em;
 }
 
 .attribution a { 
@@ -136,12 +138,10 @@ a:hover {
     .container {
         position: relative;
         margin: 20% 0;
-        left: 50%;
-        height: auto;
+        top: 0;
+        transform: none;
         width: 90%;
         min-width: 300px;
-        padding-bottom: 20%;
-        transform: translateX(-50%);
         grid-template-columns: 1fr;
     }
 
