--- a/Expandable FAQ/styles.css
+++ b/Expandable FAQ/styles.css
@@ -1,28 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-html, body {
+html {
     height: 100%;
     width: 100%;
+}
+
+body {
+    min-height: 100%;
+    background-color: #F3EDE2;
+    font-family: 'Open Sans', Helvetica, sans-serif;
 }
 
 h1 {
     display: inline-block;
     position: relative;
-    top: 20%;
+    margin: 5% 0;
     left: 50%;
     transform: translateX(-50%);
+    font-family: 'Roboto', Helvetica, sans-serif;
+    font-size: 3em;
 }
 
 #questions-container {
     position: relative;
     width: 40%;
     display: block;
-    top: 30%;
     left: 50%;
     transform: translateX(-50%);
-    
+    background-color: #fff;
+    border-radius: .7em;
+    box-shadow: 0 0 3em rgba(0, 0, 0, .1);
+    margin-bottom: 500px;
+}
+
+.question-heading {
+    padding: 1.4em;
+    font-size: 1.2em;
+}
+
+
+.btn {
+    height: 1.5em;
+    position: absolute;
+    right: 4%;
+    transition: all 400ms;
+}
+
+.btn:hover {
+    cursor: pointer;
+    transform: rotate(90deg);
+    transition: all 400ms;
+}
+
+.btn-minus {
+    display: none;
+}
+
+
+.answer-text {
+    padding: 1.6em;
+    font-size: .9em;
+    display: none;
 }
