--- a/Expandable FAQ/styles.css
+++ b/Expandable FAQ/styles.css
@@ -6,23 +6,31 @@
     box-sizing: border-box;
 }
 
-html {
+html, body {
     height: 100%;
     width: 100%;
 }
 
 body {
-    min-height: 100%;
     background-color: #F3EDE2;
     font-family: 'Open Sans', Helvetica, sans-serif;
+    color: #00243D;
+}
+
+.page-wrap {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+
 }
 
 h1 {
-    display: inline-block;
     position: relative;
-    margin: 5% 0;
-    left: 50%;
-    transform: translateX(-50%);
+    margin-top: -10%;
+    margin-bottom: 4%;
     font-family: 'Roboto', Helvetica, sans-serif;
     font-size: 3em;
 }
@@ -31,22 +39,29 @@ h1 {
     position: relative;
     width: 40%;
     display: block;
-    left: 50%;
-    transform: translateX(-50%);
+    /*left: 50%;
+    transform: translateX(-50%);*/
     background-color: #fff;
     border-radius: .7em;
     box-shadow: 0 0 3em rgba(0, 0, 0, .1);
-    margin-bottom: 500px;
+    padding: 0 1.4em;
+}
+
+hr {
+    border-top: 1px solid rgba(0, 0, 0, .2);
+}
+
+.question {
+    padding: 1.4em 0;
 }
 
 .question-heading {
-    padding: 1.4em;
     font-size: 1.2em;
 }
 
 
 .btn {
-    height: 1.5em;
+    height: 1.3em;
     position: absolute;
     right: 4%;
     transition: all 400ms;
@@ -64,7 +79,6 @@ h1 {
 
 
 .answer-text {
-    padding: 1.6em;
     font-size: .9em;
     display: none;
 }
