--- a/Expandable FAQ/styles.css
+++ b/Expandable FAQ/styles.css
@@ -72,19 +72,19 @@ hr {
 
 .answer-text {
     font-size: .9em;
-    display: block;
-    height: 0;
     padding: 0;
     opacity: 0;
     max-height: 0;
-    transition: max-height 7s ease;
+    overflow: hidden;
+    transition: all 200ms ease;
 }
 
 .expanded .answer-text {
     height: auto;
-    max-height: 500px;
+    max-height: 400px;
     opacity: 1;
-    padding: 1em 0;
+    padding: 1.3em 0 0 0;
+    max-height: 400px;
     transition: all 500ms ease;
 }
 
