--- a/Frontend Mentor/FAQ Accordion Card/styles.css
+++ b/Frontend Mentor/FAQ Accordion Card/styles.css
@@ -14,7 +14,9 @@ html, body {
 body {
     font-family: 'Kumbh Sans', sans-serif;
     background: linear-gradient(hsl(273, 75%, 66%),  hsl(240, 73%, 65%));
-    font-size: 12px;
+    font-size: 1em;
+    font-weight: 400;
+    color: hsl(240, 17%, 12%);
 }
 
 #page-wrap {
@@ -31,18 +33,82 @@ body {
     background: #fff;
     height: 60%;
     width: 65%;
+    min-width: 1000px;
+    max-width: 1250px;
+    min-height: 550px;
+    max-height: 700px;
     margin-top: 10%;
     border-radius: 2.5em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
+.left-column {
+    height: 100%;
+    width: 55%;
+    position: relative;
+    display: inline-block;
+}
 
+.illustration-wrap {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+}
+
+.illustration-background {
+    position: absolute;
+    left: -100%;
+    top: -55%;
+    height: 180%;
+    z-index: 1;
+}
+
+.illustration-woman {
+    height: 75%;
+    position: absolute;
+    top: 10%;
+    left: -17%;
+    display: inline;
+    z-index: 2;
+}
+
+.illustration-box {
+    position: absolute;
+    z-index: 3;
+    top: 40%;
+    left: -17%;
+    height: 35%;
+}
+
+.right-column {
+    display: inline-block;
+    position: relative;
+    height: 100%;
+    width: 44%;
+    padding: 6% 6% 6% 0;
+}
+
+h1 {
+    font-size: 2em;
+    font-weight: 700;
+    margin-bottom: 10%;
+}
+
+.accordion-menu-container {
+    height: 100%;
+    width: 100%;
+}
 
 .attribution { 
     font-size: 11px; text-align: center; 
+    color: rgba(0, 0, 0, .4); 
     margin-top: 10%;
     padding-bottom: 10px;
 }
 
 .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: rgba(0, 0, 0, .4); 
 }
