--- a/Frontend Mentor/FAQ Accordion Card/styles.css
+++ b/Frontend Mentor/FAQ Accordion Card/styles.css
@@ -54,30 +54,6 @@ body {
                 url(img/bg-pattern-desktop.svg) 120% 65%/190% no-repeat;
 }
 
-/*.illustration-wrap {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-}
-
-.illustration-background {
-    position: absolute;
-    left: -100%;
-    top: -55%;
-    height: 180%;
-    z-index: 1;
-}
-
-.illustration-woman {
-    height: 75%;
-    position: absolute;
-    top: 10%;
-    left: -17%;
-    display: inline;
-    z-index: 2;
-}*/
-
 .illustration-box {
     position: absolute;
     z-index: 3;
@@ -104,6 +80,7 @@ h1 {
     height: 80%;
     width: 100%;
     padding-right: 15px;
+    overflow: hidden;
 }
 
 .question {
@@ -168,4 +145,67 @@ hr {
 
 .attribution a { 
     color: rgba(0, 0, 0, .4); 
+}
+
+
+@media only screen and (max-width: 350px) {
+
+    body {
+        font-size: .75em;
+    }
+
+    .left-column {
+        display: none;
+    }
+
+    .main-card-container {
+        margin-top: 40%;
+        min-height: 450px;
+        max-height: 575px;
+        width: 85%;
+        min-width: 300px;
+        border-radius: 2em;
+        box-shadow: 0 2em 2em rgba(0, 0, 0, .3);
+    }
+
+
+    .right-column {
+        height: 130%;
+        position: relative;
+        top: -25%;
+        width: 100%;
+        padding: 0 2em 2em 2em;
+    }
+
+    .mobile-illustration-wrap {
+        display: block;
+        height: 50%;
+        width: 90%;
+        background: url(img/illustration-woman-online-mobile.svg) -100% 70%/contain no-repeat,
+                    url(img/bg-pattern-mobile.svg) 100% 90%/90% no-repeat;
+    }
+
+    h1 {
+        font-size: 2.5em;
+        display: inline-block;
+        position: relative;
+        margin: 5% 0;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .accordion-menu-container {
+        padding: 0;
+        margin-bottom: 1em;
+    }
+
+    .answer-text {
+        font-size: .85em;
+    }
+
+
+
+    .attribution {
+        font-size: .7em;
+    }
 }
