--- a/Frontend Mentor/Interactive Pricing/style.css
+++ b/Frontend Mentor/Interactive Pricing/style.css
@@ -1,11 +1,98 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+html, body, .content-wrap {
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    font-family: 'Manrope', sans-serif;
+    letter-spacing: .02em;
+    background: hsl(230, 100%, 99%);
+    color: hsl(225, 20%, 60%);
+    font-weight: lighter;
+}
+
+.content-wrap {
+    height: 96%;
+    width: 100%;
+    padding: 5% 7%;
+    background: url(img/bg-pattern.svg) top left/350% no-repeat;
+}
+
+
+header {
+    background: url(img/pattern-circles.svg) center center/auto no-repeat;
+    display: inline-block;
+    position: relative;
+    margin-top: 15%;
+    left: 50%;
+    height: 22%;
+    padding: 10% 0;
+    transform: translateX(-50%);
+    text-align: center;
+    margin-bottom: 10%;
+}
+
+h1 {
+    font-size: 1.2em;
+    margin-bottom: .5em;
+    color: hsl(227, 35%, 25%);
+}
+
+p {
+    font-size: .75em;
+}
+
+.sub-heading {
+    font-size: .85em;
+    line-height: 1.8em;
+}
+
+.main-card {
+    position: relative;
+    width: 100%;
+    height: 60%;
+    display: grid;
+    background: #fff;
+    box-shadow: 0 3em 3em rgba(0, 0, 0, .1);
+    border-radius: .6em;
+}
+
+.price-explorer {
+    padding: 8%;
+    border-bottom: solid 1px rgba(0, 0, 0, .1);
+}
+
+.features {
+    padding: 8%;
+}
+
+a {
+    text-decoration: none;
+    color: hsl(227, 35%, 25%);
+}
+
+a:hover {
+    cursor: pointer;
+}
+
+footer {
+    height: 4%;
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+
+}
+
 .attribution { 
-    font-size: 11px; 
+    font-size: .6em;
     text-align: center; 
 }
     
