--- a/Frontend Mentor/Interactive Pricing/style.css
+++ b/Frontend Mentor/Interactive Pricing/style.css
@@ -81,13 +81,17 @@ p {
     justify-items: center;    
 }
 
-.pageviews {
+.pageviews-container {
     text-transform: uppercase;
     font-size: .7em;
     letter-spacing: .2em;
     font-weight: 800;
     text-align: center;
     grid-area: pageviews;
+}
+
+.pageview-number {
+    display: inline;
 }
 
 
@@ -124,7 +128,7 @@ p {
     -webkit-appearance: none;
     appearance: none;
     height: 7px;
-    background: hsl(224, 65%, 95%);
+    background: linear-gradient( 90deg, hsl(174, 77%, 80%) 50%, hsl(224, 65%, 95%) 50.01% );
     border-radius: 2em;
     cursor: pointer;
 }
