--- a/Frontend Mentor/Loopstudios Landing Page/style.css
+++ b/Frontend Mentor/Loopstudios Landing Page/style.css
@@ -1,9 +1,65 @@
-@import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@200&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+body {
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 200;
+    min-height: 100vh;
+    color: #fff;
+    
+
+}
+
+#hero {
+    background: url(img/mobile/image-hero.jpg) center center/cover no-repeat;
+    height: 100vh;
+    width: 100vw;
+    padding: 6%;
+}
+
+
+header {
+    height: 10%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header nav {
+    display: none;
+    position: absolute;
+    background: #000;
+    height: 100vh;
+    width: 100vw;
+    padding: 4%;
+    text-transform: uppercase;
+    /*height: 0;
+    width: 0;*/
+}
+
+.hero-message {
+    position: relative;
+    top: 40%;
+    transform: translateY(-50%);
+    font-size: 2.5em;
+    text-transform: uppercase;
+    width: 100%;
+    border:solid 2px #fff;
+    padding: 7% 7% 6% 7%;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
 }
 
 .attribution { 
