--- a/Frontend Mentor/Loopstudios Landing Page/style.css
+++ b/Frontend Mentor/Loopstudios Landing Page/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Alata&family=Josefin+Sans:wght@100&display=swap');
 
 * {
     padding: 0;
@@ -8,10 +8,10 @@
 
 body {
     font-family: 'Josefin Sans', sans-serif;
-    font-weight: 200;
+    font-weight: 100;
     min-height: 100vh;
     color: #fff;
-    
+    text-align: center;
 
 }
 
@@ -28,6 +28,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 }
 
 .logo img {
@@ -63,15 +64,16 @@ header li {
     margin-bottom: 1em;
 }
 
-.hero-message {
+h1 {
     position: relative;
     top: 40%;
     transform: translateY(-50%);
-    font-size: 2.5em;
+    font-size: 2.7em;
     text-transform: uppercase;
     width: 100%;
     border:solid 2px #fff;
     padding: 7% 7% 6% 7%;
+    text-align: left;
 }
 
 li {
@@ -100,6 +102,34 @@ header input {
 #hamburger-menu-icon:checked ~ #header-navigation {
     transform: none;
     transition: transform 200ms ease;
+}
+
+.leader {
+    width: 100vw;
+    height: 100vh;
+    padding: 6%;
+    text-align: center;
+}
+
+.leader img {
+    width: 100%;
+    margin-top: 20%;
+    margin-bottom: 15%;
+}
+
+h2 {
+    text-transform: uppercase;
+    font-size: 2em;
+    margin-bottom: .8em;
+    color: #000;
+}
+
+p {
+    font-family: 'Alata', sans-serif;
+    color: hsl(0, 0%, 55%);
+    font-size: .9em;
+    line-height: 1.6em;
+    padding: 0 10%;
 }
 
 footer {
