--- a/Frontend Mentor/Loopstudios Landing Page/style.css
+++ b/Frontend Mentor/Loopstudios Landing Page/style.css
@@ -217,16 +217,44 @@ p {
 
 
 footer {
+    padding: 12%;
     background: #000;
     font-family: 'Alata', sans-serif;
     text-align: center;
     font-size: .9em;
 }
 
+footer .logo {
+    margin-bottom: 2em;
+}
+
+footer ul {
+    margin-bottom: 3em;
+}
+
+footer li {
+    margin-bottom: 1.2em;
+}
+
+.social-icons {
+    position: relative;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 1.5em;
+}
+
+.copyright {
+    color: hsl(0, 0%, 55%);
+}
+
 .attribution { 
-    font-size: 11px; text-align: center; 
+    font-size: .5em; text-align: center; 
 }
 
 .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: hsl(0, 0%, 55%); 
 }
