--- a/Frontend Mentor/Loopstudios Landing Page/style.css
+++ b/Frontend Mentor/Loopstudios Landing Page/style.css
@@ -19,6 +19,7 @@ body {
     height: 100vh;
     width: 100vw;
     padding: 6%;
+    overflow: hidden;
 }
 
 
@@ -43,12 +44,15 @@ header {
     left: 0;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
     background: #000;
     padding-left: 6%;
     text-transform: uppercase;
+    text-align: left;
     z-index: 2;
     transform: translateX(100%);
     transition: transform 200ms ease;
+    
 }
 
 header ul {
@@ -146,6 +150,7 @@ p {
 
 .our-creations h2 {
     grid-area: creations-heading;
+    display: block;
 }
 
 .see-all {
