--- a/Frontend Mentor/Loopstudios Landing Page/style.css
+++ b/Frontend Mentor/Loopstudios Landing Page/style.css
@@ -91,9 +91,9 @@ a {
 header input {
     -webkit-appearance: none;
     -moz-appearance: none;
-    height: 1.5em;
-    width: 2em;
-    background: url(img/icon-hamburger.svg) center center/auto no-repeat;
+    height: 1.1em;
+    width: 1.6em;
+    background: url(img/icon-hamburger.svg) center center/cover no-repeat;
     cursor: pointer;
 }
 
@@ -125,7 +125,7 @@ section {
 h2 {
     text-transform: uppercase;
     font-size: 2em;
-    margin-bottom: .8em;
+    margin-bottom: 10%;
     color: #000;
 }
 
@@ -170,7 +170,7 @@ p {
     grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
     grid-gap: 1.5em;
     grid-area: thumbnails;
-    padding: 8% 0 10% 0;
+    padding-bottom: 10%
 }
 
 .thumbnail {
@@ -262,4 +262,36 @@ footer li {
 
 .attribution a { 
     color: hsl(0, 0%, 55%); 
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+    .logo img {
+        height: 2.2em;
+    }
+
+    header input {
+        height: 2em;
+        width: 3em;
+    }
+
+    h1 {
+        font-size: 4.2em;
+    }
+
+
+    h2 {
+        font-size: 2.8em;
+    }
+
+    .leader img {
+        margin-top: 10%;
+    }
+
+    p, footer {
+        font-size: 1.1em;
+    }
+
+
+    
 }
