--- a/Frontend Mentor/Loopstudios Landing Page/style.css
+++ b/Frontend Mentor/Loopstudios Landing Page/style.css
@@ -17,7 +17,6 @@ body {
 #hero {
     background: url(img/mobile/image-hero.jpg) center center/cover no-repeat;
     height: 100vh;
-    width: 100vw;
     padding: 6%;
     overflow: hidden;
     text-align: left;
@@ -107,6 +106,7 @@ header input {
 
 section {
     padding: 6%;
+    width: 100vw;
 }
 
 .leader {
@@ -127,6 +127,7 @@ section {
 }
 
 h2 {
+    margin-top: 6%;
     text-transform: uppercase;
     font-size: 2em;
     margin-bottom: 10%;
@@ -149,12 +150,11 @@ p {
         "creations-heading" 
         "thumbnails" 
         "see-all";
-    margin-bottom: 20%;       
+    margin-bottom: 10%;    
 }
 
 .our-creations h2 {
     grid-area: creations-heading;
-    display: block;
 }
 
 .see-all {
@@ -174,7 +174,7 @@ p {
     grid-template-columns: repeat( auto-fit, minmax(300px, 1fr) );
     grid-gap: 1.5em;
     grid-area: thumbnails;
-    padding-bottom: 10%
+    padding-bottom: 10%;
 }
 
 .thumbnail {
@@ -320,7 +320,7 @@ footer li {
 
 
     
-@media only screen and (min-width: 1025px) {
+@media only screen and (min-width: 1300px) {
     #hero {
         background: url(img/desktop/image-hero.jpg) center center/cover no-repeat;
         height: 80vh;
