--- a/Frontend Mentor/Social Media Dashboard/style.css
+++ b/Frontend Mentor/Social Media Dashboard/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
 
 * {
     margin: 0;
@@ -5,6 +6,93 @@
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+}
+
+body {
+    font-family: 'Inter', sans-serif;
+    padding: 9% 6%; 
+}
+
+.page-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+header {
+    margin-bottom: 2em;
+}
+
+h1 {
+    font-size: 1.6em;
+    font-weight: 600;
+    display: inline-block;
+    margin-bottom: .2em;
+}
+
+.total-followers-count, .toggle-label  {
+    font-size: .9em;
+    font-weight: 600;
+    color: hsl(228, 12%, 44%);
+}
+
+hr {
+    height: 1px;
+    border: none;
+    background: hsl(228, 12%, 44%);
+    margin: 1.2em 0;
+}
+
+.dark-mode-option {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dark-mode-option input {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    position: relative;
+    height: 2.2em;
+    width: 4.6em;
+    background: hsl(230, 22%, 74%);
+    border-radius: 3em;
+    cursor: pointer;
+}
+
+.dark-mode-option input::before {
+    content: '';
+    background: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1.6em;
+    width: 1.6em;
+    margin-top: .3em; 
+    margin-left: .4em;
+    border-radius: 50%;
+    transition: all 200ms ease;
+}
+
+.dark-mode-option input:checked::before {
+    margin-left: 2.7em;
+    transition: all 200ms ease;
+}
+
+.card {
+    background: hsl(227, 47%, 96%);
+    width: 100%;
+    border-radius: .3em;
+}
+
+.big-card {
+    margin-bottom: 1.4em;
+    display: flex;
+}
 
 .attribution { 
     font-size: 11px; text-align: center; 
