--- a/Frontend Mentor/Social Media Dashboard/style.css
+++ b/Frontend Mentor/Social Media Dashboard/style.css
@@ -32,7 +32,7 @@ h1 {
     margin-bottom: .2em;
 }
 
-.total-followers-count, .toggle-label  {
+.total-followers-count, .toggle-label, .big-card .social-username, .small-card .stat-label {
     font-size: .9em;
     font-weight: 600;
     color: hsl(228, 12%, 44%);
@@ -83,24 +83,35 @@ hr {
     transition: all 200ms ease;
 }
 
+.general-overview {
+    display: grid;
+    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+    grid-gap: 1.5em;
+    margin-bottom: 2.8em;
+}
+
 .card {
     background: hsl(227, 47%, 96%);
     width: 100%;
     border-radius: .3em;
+    min-width: 250px;
 }
 
 .big-card {
-    margin-bottom: 1.4em;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 10% 0;
-    
 }
 
 .big-card .icon-username-container {
     display: flex;
+    align-items: center;
     margin-bottom: 1em;
+}
+
+.big-card .social-username {
+    font-size: .8em;
 }
 
 .big-card .social-icon {
@@ -119,17 +130,19 @@ hr {
     background-size: 100% 4px;
     background-repeat: no-repeat;
     background-image: linear-gradient(to right, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
-    
 }
 
 .big-card.youtube {
     border-top: solid 4px hsl(348, 97%, 39%);
 }
 
-.big-card .stat {
+.stat {
     color: hsl(230, 17%, 14%);
-    font-size: 4em;
     font-weight: 600;
+}
+
+.big-card .stat {
+    font-size: 4em;
 }
 
 .big-card .stat-label {
@@ -148,6 +161,7 @@ hr {
 }
 
 .positive-change {
+    position: relative;
     color: hsl(163, 72%, 41%);
 }
 
@@ -156,7 +170,7 @@ hr {
     content: url(img/icon-up.svg);
     margin-right: .2em;
     top: -15%;
-    left: -20%;
+    margin-left: -1em;
 }
 
 .negative-change {
@@ -168,13 +182,52 @@ hr {
     content: url(img/icon-down.svg);
     margin-right: .2em;
     top: -15%;
-    left: -20%;
+    margin-left: -1em;
+}
+
+.overview-today {
+    margin-bottom: 3em;
+}
+
+.card-container {
+    display: grid;
+    grid-gap: 1.2em;
+    grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );
+}
+
+h2 {
+    color: hsl(228, 12%, 44%);
+    margin-bottom: 1.2em;
+}
+
+.small-card {
+    display: grid;
+    grid-template: 1fr 1fr/1fr 1fr;
+    grid-row-gap: 1.2em;
+    padding: 8%;
+    justify-content: center;
+}
+
+.small-card .social-icon, .small-card .stat-change {
+    justify-self: flex-end;
+}
+
+.small-card .stat {
+    font-size: 2em;
+    display: inline;
+    line-height: .8em;
+}
+
+.small-card .stat, .small-card .stat-change {
+    align-self: flex-end;
 }
 
 .attribution { 
     font-size: 11px; text-align: center; 
+    padding: 2em 0;
 }
 
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+    text-decoration: none;
 }
