--- a/Frontend Mentor/Social Media Dashboard/style.css
+++ b/Frontend Mentor/Social Media Dashboard/style.css
@@ -15,6 +15,19 @@ body {
     padding: 9% 6%; 
 }
 
+body::before {
+    content: '';
+    width: 100%;
+    height: 35%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: hsl(225, 100%, 98%);
+    border-radius: 0 0 1em 1em;
+    z-index: -1;
+    
+}
+
 .page-wrap {
     display: flex;
     flex-direction: column;
