--- a/Frontend Mentor/Sunnyside Agency/style.css
+++ b/Frontend Mentor/Sunnyside Agency/style.css
@@ -1,17 +1,95 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap");
+/* Graphic design section/footer text */
+/* Section text */
+/* Neutral Colors */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.attribution { 
-    font-size: 11px; text-align: center; 
+html, body {
+  width: 100%;
+  height: 100%;
+  font-family: "Barlow", sans-serif;
 }
 
-.attribution a { 
-    color: hsl(228, 45%, 44%); 
+.hero {
+  position: relative;
+  color: #fff;
+  height: 70%;
+  background: url(img/mobile/image-header.jpg) center center/cover no-repeat;
+  padding: 10% 8%;
+}
+.hero header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.hero header .hamburger-icon {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  height: 1.6em;
+  width: 2em;
+  background: url(img/icon-hamburger.svg) center center/cover;
+  opacity: 60%;
+  cursor: pointer;
+}
+.hero nav {
+  position: absolute;
+  top: 22%;
+  background: #fff;
+  height: 17em;
+  width: 84%;
+  padding-bottom: 1em;
+}
+.hero nav::before {
+  position: absolute;
+  top: -27px;
+  right: 0px;
+  content: "";
+  height: 0;
+  width: 0;
+  border-right: solid #fff 14px;
+  border-bottom: solid #fff 14px;
+  border-left: solid transparent 14px;
+  border-top: solid transparent 14px;
+}
+.hero nav ul {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  list-style: none;
+  top: 50%;
+  transform: translateY(-50%);
+  height: 100%;
+}
+.hero nav li {
+  text-align: center;
+}
+.hero nav a {
+  text-decoration: none;
+  color: #818498;
+}
+.hero nav .contact {
+  margin-top: 0.8em;
+}
+.hero nav .contact a {
+  color: #23303e;
+  font-family: "Fraunces", serif;
+  text-transform: uppercase;
+  padding: 1em 1.8em;
+  background: #fad400;
+  border-radius: 3em;
 }
 
-body {
-    text-align: center;
+h1 {
+  text-transform: uppercase;
 }
+
+.grid-image {
+  width: 100%;
+}
+
+/*# sourceMappingURL=style.css.map */
