--- a/Frontend Mentor/Sunnyside Agency/style.css
+++ b/Frontend Mentor/Sunnyside Agency/style.css
@@ -11,7 +11,6 @@
 html, body {
   width: 100%;
   height: 100%;
-  font-family: "Barlow", sans-serif;
 }
 
 .hero {
@@ -20,6 +19,7 @@ html, body {
   height: 70%;
   background: url(img/mobile/image-header.jpg) center center/cover no-repeat;
   padding: 10% 8%;
+  overflow: hidden;
 }
 .hero header {
   display: flex;
@@ -37,14 +37,15 @@ html, body {
 }
 .hero .hamburger-icon:checked ~ .main-menu {
   transform: none;
+  transition: transform 200ms ease;
 }
 .hero nav {
   position: absolute;
   top: 22%;
-  transform: translateX(200%);
+  transform: translateX(100vw);
   background: #fff;
-  height: 17em;
   width: 84%;
+  height: 17em;
   padding-bottom: 1em;
   transition: transform 200ms ease;
 }
@@ -74,7 +75,6 @@ html, body {
   text-align: center;
 }
 .hero nav a {
-  text-decoration: none;
   color: #818498;
 }
 .hero nav .contact {
@@ -89,8 +89,15 @@ html, body {
   border-radius: 3em;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1 {
+  font-family: "Fraunces", serif;
   text-transform: uppercase;
+  text-align: center;
+  font-size: 3em;
 }
 
 .grid-image {
