--- a/Frontend Mentor/Sunnyside Agency/style.scss
+++ b/Frontend Mentor/Sunnyside Agency/style.scss
@@ -18,7 +18,6 @@ $serif-font-stack: 'Fraunces', serif;
 html, body {
     width: 100%;
     height: 100%;
-    font-family: $sans-serif-font-stack;
 }
 
 
@@ -28,6 +27,7 @@ html, body {
     height: 70%;
     background: url(img/mobile/image-header.jpg) center center/cover no-repeat;
     padding: 10% 8%;
+    overflow: hidden;
 
     header {
         display: flex;
@@ -46,16 +46,17 @@ html, body {
 
         &:checked ~ .main-menu {
             transform: none;
+            transition: transform 200ms ease;
         }
     }
  
     nav {
         position: absolute;
         top: 22%;
-        transform: translateX(200%);
+        transform: translateX(100vw);
         background: #fff;
-        height: 17em;
         width: 84%;
+        height: 17em;
         padding-bottom: 1em;
         transition: transform 200ms ease;
 
@@ -88,7 +89,6 @@ html, body {
         }
 
         a {
-            text-decoration: none;
             color: hsl(232, 10%, 55%);
         }
 
@@ -108,8 +108,15 @@ html, body {
     }
 }
 
+a {
+    text-decoration: none;
+}
+
 h1 {
+    font-family: $serif-font-stack;
     text-transform: uppercase;
+    text-align: center;
+    font-size: 3em;
 }
 
 .grid-image {
