Hero section styling

--- a/Frontend Mentor/Sunnyside Agency/style.css
+++ b/Frontend Mentor/Sunnyside Agency/style.css
@@ -16,7 +16,7 @@ html, body {
 .hero {
   position: relative;
   color: #fff;
-  height: 70%;
+  height: 80%;
   background: url(img/mobile/image-header.jpg) center center/cover no-repeat;
   padding: 10% 8%;
   overflow: hidden;
@@ -88,16 +88,25 @@ html, body {
   background: #fad400;
   border-radius: 3em;
 }
+.hero h1 {
+  font-family: "Fraunces", serif;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 3em;
+  margin: 1.2em 0 1em 0;
+}
+.hero .arrow-icon {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
 a {
   text-decoration: none;
 }
 
-h1 {
-  font-family: "Fraunces", serif;
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 3em;
+.brand-showcase {
+  display: grid;
 }
 
 .grid-image {
